# Infrarust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker_command.txt  infrarust-limbo-nbt-approach.md  main.py
crates/infrarust/: Cargo.toml
crates/infrarust-api/: Cargo.toml
crates/infrarust-api/src/: command.rs  error.rs  lib.rs  loader.rs  message.rs  player.rs  plugin.rs  prelude.rs
crates/infrarust-api/src/event/: bus.rs  mod.rs
crates/infrarust-api/src/events/: chat.rs  connection.rs  lifecycle.rs  mod.rs  packet.rs  proxy.rs
crates/infrarust-api/src/filter/: codec.rs
crates/infrarust-api/src/limbo/: context.rs  handler.rs  mod.rs  session.rs
crates/infrarust-api/src/services/: ban_service.rs  config_service.rs  mod.rs  player_registry.rs  scheduler.rs  server_manager.rs
crates/infrarust-api/src/types/: component.rs  extensions.rs  mod.rs  permission.rs  player_id.rs  protocol_version.rs  raw_packet.rs  server_id.rs
crates/infrarust-api/src/virtual_backend/: handler.rs  session.rs
crates/infrarust-ban/: Cargo.toml
crates/infrarust-ban/src/: lib.rs
crates/infrarust-config/: Cargo.toml
crates/infrarust-config/src/: defaults.rs  domain.rs  error.rs  lib.rs  provider.rs  proxy.rs  server.rs  types.rs  validation.rs
crates/infrarust-config/src/types/: address.rs  ban.rs  docker.rs  ip_filter.rs  mod.rs  network.rs  proxy_mode.rs  rate_limit.rs  server_manager.rs  status.rs  telemetry.rs
crates/infrarust-config/tests/: domain_index.rs  ip_filter.rs  parse_proxy.rs  parse_server.rs  server_address.rs  telemetry_config.rs  validation.rs
crates/infrarust-config/tests/fixtures/: infrarust.toml
crates/infrarust-core/: Cargo.toml  build.rs
crates/infrarust-core/src/: error.rs  lib.rs  registry.rs  reload.rs  server.rs
crates/infrarust-core/src/auth/: game_profile.rs  mojang.rs
crates/infrarust-core/src/ban/: file_storage.rs  manager.rs  storage.rs  types.rs
crates/infrarust-core/src/commands/: brigadier.rs  mod.rs
crates/infrarust-core/src/console/: dispatcher.rs  mod.rs  output.rs
crates/infrarust-core/src/event_bus/: bus.rs  conversion.rs  handler.rs  mod.rs
crates/infrarust-core/src/filter/: codec_chain.rs  codec_registry.rs  mod.rs  ordering.rs  registry_base.rs  transport_chain.rs  transport_registry.rs
crates/infrarust-core/src/forwarding/: mod.rs
crates/infrarust-core/src/handler/: client_only.rs  helpers.rs  legacy.rs  mod.rs  offline.rs  passthrough.rs  status.rs
crates/infrarust-core/src/limbo/: chat.rs  chunk.rs  engine.rs  handler_chain.rs  keepalive.rs  login.rs  mod.rs  registry.rs  registry_cache.rs  registry_nbt.rs  session.rs  spawn.rs  test_helpers.rs  virtual_session.rs
crates/infrarust-core/src/middleware/: ban_check.rs  ban_ip_check.rs  domain_router.rs  handshake_parser.rs  ip_filter.rs  login_start_parser.rs  mod.rs  rate_limiter.rs  server_manager.rs  telemetry.rs
crates/infrarust-core/src/permissions/: mod.rs
crates/infrarust-core/tests/: ban_file_storage.rs  ban_manager.rs  ban_middleware.rs  ban_types.rs  domain_router_dynamic.rs  event_bus.rs  event_bus_priority.rs  event_conversion.rs  pipeline.rs  player_session.rs  plugin_context.rs  plugin_dependency.rs  plugin_integration.rs  plugin_manager.rs  provider_docker.rs  provider_file.rs  provider_id.rs  scheduler.rs  telemetry_metrics.rs  telemetry_middleware.rs  telemetry_sampler.rs
crates/infrarust-limbo/: Cargo.toml
crates/infrarust-limbo/src/: lib.rs
crates/infrarust-protocol/: Cargo.toml
crates/infrarust-protocol/src/: chunk.rs  error.rs  lib.rs  nbt.rs  version.rs
crates/infrarust-proxy/: Cargo.toml
crates/infrarust-proxy/src/: main.rs  plugins.rs  wizard.rs
crates/infrarust-server-manager/: Cargo.toml
crates/infrarust-server-manager/src/: crafty.rs  lib.rs  local.rs  monitor.rs  provider.rs  pterodactyl.rs  service.rs  state.rs
crates/infrarust-server-manager/tests/: crafty.rs  local.rs  pterodactyl.rs  service.rs  state.rs
crates/infrarust-transport/: Cargo.toml
crates/infrarust-transport/src/: backend.rs  connection.rs  forward.rs  lib.rs  listener.rs  proxy_protocol.rs  socket.rs
crates/infrarust-transport/tests/: backend.rs  connection.rs  forward.rs  listener.rs  proxy_protocol.rs  socket.rs
crates/infrarust/src/: lib.rs  main.rs  migrate.rs  plugins.rs  wizard.rs
crates/infrarust_ban_system/: Cargo.toml
crates/infrarust_ban_system/src/: index.rs  lib.rs  memory.rs  storage.rs
crates/infrarust_config/: Cargo.toml
crates/infrarust_config/src/: defaults.rs  lib.rs  proxy.rs  server.rs  service.rs
crates/infrarust_core/: Cargo.toml
crates/infrarust_core/src/: lib.rs
crates/infrarust_event/: Cargo.toml
crates/infrarust_event/src/: eventbus.rs  events.rs  lib.rs
crates/infrarust_network/: Cargo.toml
crates/infrarust_protocol/: Cargo.toml
crates/infrarust_protocol/src/: lib.rs  network.rs  version.rs
crates/infrarust_proxy/: Cargo.toml
crates/infrarust_security/: Cargo.toml
crates/infrarust_security/src/: lib.rs  rate_limiter.rs
crates/infrarust_server/: Cargo.toml
crates/infrarust_server/src/: gateway.rs  lib.rs
crates/infrarust_server_manager/: Cargo.toml
crates/infrarust_server_manager/examples/: process_provider.rs  pterodactyl_usage.rs
crates/infrarust_server_manager/src/: error.rs  lib.rs  pterodactyl.rs  server_manager.rs
crates/infrarust_server_manager/tests/: integration_tests.rs  local.rs
crates/infrarust_telemetry/: Cargo.toml
crates/infrarust_telemetry/src/: lib.rs  tracing.rs
docs/: .gitignore  (+3 more)
plugins/infrarust-plugin-admin-api/: Cargo.toml
plugins/infrarust-plugin-admin-api/frontend/: nuxt.config.ts
plugins/infrarust-plugin-admin-api/src/: auth.rs  config.rs  frontend.rs  health_checker.rs  lib.rs  log_layer.rs  rate_limit.rs  router.rs  server_store.rs  state.rs  util.rs
plugins/infrarust-plugin-auth/: Cargo.toml
plugins/infrarust-plugin-auth/src/: account.rs  config.rs  handler.rs  ip_mask.rs  lib.rs  password.rs  util.rs
tools/infrarust-motd/: Cargo.toml
tools/registry-extractor/: Cargo.toml
tools/registry-extractor/src/: extractor.rs  main.rs
(+550 files in other folders)
