[workspace]
resolver = "2"
members = ["crates/infrarust*"]

[workspace.package]
version = "1.4.0"
edition = "2024"
authors = ["Shadowner"]
repository = "https://github.com/shadowner/infrarust"
license = "AGPL-3.0-only"
homepage = "https://infrarust.dev"
documentation = "https://infrarust.dev/quickstart"
exclude = [
    "docs/*",
    "!docs/public/img/logo.svg",
    "docker/*",
    "config_examples/*",
    ".github/*",
    ".vscode/*",
]

[workspace.dependencies]
# Valence Protocol & Utilities
valence_generated = { path = "crates/infrarust_valence_generated", version = "1.4.0" }
valence_protocol = { path = "crates/infrarust_valence_protocol", version = "1.4.0" }
valence_math = { path = "crates/infrarust_valence_math", version = "1.4.0" }
valence_nbt = { path = "crates/infrarust_valence_nbt", features = [
    "uuid",
], version = "0.8.0" }
valence_text = { path = "crates/infrarust_valence_text", version = "1.4.0" }
java_string = { path = "crates/java_string", version = "0.1.2" }

valence_ident = { path = "crates/infrarust_valence_ident" }
valence_ident_macros = { path = "crates/infrarust_valence_ident_macros" }
valence_protocol_macros = { path = "crates/infrarust_valence_protocol_macros" }
valence_build_utils = { path = "crates/infrarust_valence_build_utils" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["serde"] }
bevy_ecs = "0.16.1"
anyhow = "1.0"
byteorder = "1.5"
base64 = "0.22.1"
url = { version = "2.4", features = ["serde"] }
tracing = "0.1"
bytes = "1.5"
bitfield-struct = "0.11.0"
derive_more = { version = "2.0.1", features = ["from", "into", "deref", "deref_mut", "as_ref"] }
cfb8 = "0.8"
flate2 = "1.0"
aes = "0.8"
glam = "0.30.3"
heck = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.1"

async-trait = "0.1.88"
dashmap = "6.1.0"
lru = "0.14.0"
syn = "2.0.101"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
