[workspace]
resolver = "2"
members = [
    "crates/infrarust-protocol",
    "crates/infrarust-api",
    "crates/infrarust-config",
    "crates/infrarust-core",
    "crates/infrarust-limbo",
    "crates/infrarust-ban",
    "crates/infrarust-server-manager",
    "crates/infrarust-transport",
    "crates/infrarust-proxy",
    "plugins/infrarust-plugin-auth",
    "plugins/infrarust-plugin-antibot",
    "plugins/infrarust-plugin-hello",
    "plugins/infrarust-plugin-server-wake",
    "plugins/infrarust-plugin-queue",
    "tools/infrarust-motd",
]

[workspace.dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt", "rt-multi-thread", "signal", "process", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v3", "v4", "serde"] }
arc-swap = "1"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
notify = "7"
dashmap = "6"
governor = "0.8"
nonzero_ext = "0.3"
toml = "0.8"

# Internal crates
infrarust-protocol = { path = "crates/infrarust-protocol" }
infrarust-api = { path = "crates/infrarust-api" }
infrarust-config = { path = "crates/infrarust-config" }
infrarust-transport = { path = "crates/infrarust-transport" }
infrarust-core = { path = "crates/infrarust-core" }
infrarust-limbo = { path = "crates/infrarust-limbo" }
infrarust-ban = { path = "crates/infrarust-ban" }
infrarust-server-manager = { path = "crates/infrarust-server-manager" }

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/Shadowner/Infrarust"

[profile.release]
lto = true
codegen-units = 1
strip = true
