[package]
name = "infrarust-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin API for Infrarust, a Minecraft reverse proxy"
keywords = ["minecraft", "proxy", "plugin", "api"]
categories = ["game-development", "network-programming"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
