[package]
name = "infrarust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infrarust-config = { workspace = true }
infrarust-protocol = { workspace = true }
infrarust-transport = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nonzero_ext = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

# Auth Mojang (ClientOnly)
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.10"
rand = "0.8"
num-bigint = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
