[package]
name = "infrarust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
docker = ["dep:bollard", "dep:futures-util"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
infrarust-api = { workspace = true, features = ["serde"] }
infrarust-config = { workspace = true }
infrarust-protocol = { workspace = true }
infrarust-transport = { workspace = true }
infrarust-server-manager = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nonzero_ext = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
wildmatch = "2.6"
flate2 = "1.1.9"

# Docker provider (optional)
bollard = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# Telemetry (optional)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic", "http-proto"] }
tracing-opentelemetry = { version = "0.32", optional = true }

# Auth Mojang (ClientOnly)
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.10"
rand = "0.8"
num-bigint = "0.4"
base64 = "0.22"

[build-dependencies]
flate2 = "1.1.9"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
