[package]
name = "infrarust-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "infrarust"
path = "src/main.rs"

[features]
telemetry = ["infrarust-core/telemetry", "dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
infrarust-protocol = { workspace = true }
infrarust-api = { workspace = true }
infrarust-config = { workspace = true }
infrarust-core = { workspace = true }
infrarust-limbo = { workspace = true }
infrarust-ban = { workspace = true }
infrarust-server-manager = { workspace = true }

# Telemetry (optional)
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
