[package]
name = "infrarust-server-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["pterodactyl", "local"]
pterodactyl = []
crafty = []
local = []

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
infrarust-api = { workspace = true }
