[package]
name = "infrarust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "A Rust universal Minecraft proxy"
default-run = "infrarust"
readme = "../../README.md"
categories = ["network-programming", "command-line-utilities"]
keywords = ["networking", "proxy", "minecraft", "gameserver", "protocol"]


[features]

[dependencies]


[[bin]]
name = "infrarust"
path = "src/bin/infrarust.rs"
