[package]
name = "infrarust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "A Rust universal Minecraft proxy"
default-run = "infrarust"
readme = "../../README.md"
categories = ["network-programming", "command-line-utilities"]
keywords = ["networking", "proxy", "minecraft", "gameserver", "protocol"]


[features]

[dependencies]
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
bytes.workspace = true

valence_protocol.workspace = true
[[bin]]
name = "infrarust"
path = "src/bin/infrarust.rs"
