[package]
name = "infrarust-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "infrarust"
path = "src/main.rs"

[features]
default = ["default-plugins"]
telemetry = ["infrarust-core/telemetry", "dep:opentelemetry", "dep:tracing-opentelemetry"]
default-plugins = ["plugin-auth", "plugin-server-wake"]
plugin-auth = ["dep:infrarust-plugin-auth"]
plugin-hello = ["dep:infrarust-plugin-hello"]
plugin-server-wake = ["dep:infrarust-plugin-server-wake"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dialoguer = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
uuid = { workspace = true }
infrarust_protocol = { workspace = true }
infrarust-api = { workspace = true }
infrarust_config = { workspace = true }
infrarust-core = { workspace = true }
infrarust_server_manager = { workspace = true }

# Plugins (optional)
infrarust-plugin-auth = { workspace = true, optional = true }
infrarust-plugin-hello = { workspace = true, optional = true }
infrarust-plugin-server-wake = { workspace = true, optional = true }
infrarust-plugin-admin-api = { workspace = true }

# Telemetry (optional)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
