[package]
name = "infrarust_ban_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[features]
redis = []
database = []