[package]
name = "infrarust_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
humantime-serde = { workspace = true }
wildmatch = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
