[package]
name = "infrarust_event"
description = "A Minecraft event system for Infrarust"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
# Async & Runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

tracing = { workspace = true }

infrarust_protocol = { path = "../infrarust_protocol", version = "1.3.1" }