[package]
name = "infrarust_protocol"
version = "1.1.1"
edition = "2024"

[dependencies]
# Internal dependencies
infrarust_core = { path = "../infrarust_core" }

# Data handling
bytes = { workspace = true }
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
sha1 = { workspace = true }
base64 = { workspace = true }
num-bigint = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utility
thiserror = { workspace = true }
tracing = { workspace = true }