[package]
name = "infrarust_protocol"
version.workspace = true
edition.workspace = true
description = "Minecraft protocol implementation for Infrarust"
authors = ["Shado"]
license.workspace = true
repository = "https://github.com/shadowner/infrarust"

[dependencies]
bytes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
sha1 = { workspace = true }
base64 = { workspace = true }
num-bigint = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
