[package]
name = "infrarust_proxy"
version = "1.1.1"
edition = "2024"

[dependencies]
# Internal dependencies
infrarust_core = { path = "../infrarust_core" }
infrarust_protocol = { path = "../infrarust_protocol" }
infrarust_network = { path = "../infrarust_network" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

# HTTP for online authentication
reqwest = { workspace = true }

# Utils
uuid = { workspace = true }
tracing = { workspace = true }