[package]
name = "infrarust_server"
version = "1.1.1"
edition = "2024"

[dependencies]
# Internal dependencies
infrarust_core = { path = "../infrarust_core" }
infrarust_protocol = { path = "../infrarust_protocol" }
infrarust_network = { path = "../infrarust_network" }
infrarust_proxy = { path = "../infrarust_proxy" }
infrarust_security = { path = "../infrarust_security" }
infrarust_telemetry = { path = "../infrarust_telemetry" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utils
uuid = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & tracing
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }