[package]
name = "infrarust_server_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Minecraft server manager that handles API monitoring and system commands"

[dependencies]
# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# Networking and API
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "2.0.12"

# Logging
env_logger = "0.11.8"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
path = "examples/pterodactyl_usage.rs"
name = "example-pterodactyl"

[[example]]
name = "example-process"
path = "examples/process_provider.rs"
